# macosx-make-standalone

./: LICENSE  README.md  macosx-make-standalone.cabal  test
src/: Cmds.hs  LibDepGraph.hs  MakeStandalone.hs  Opts.hs  Plan.hs  State.hs
